--- a/sample/index.html
+++ b/sample/index.html
@@ -13,15 +13,14 @@
 
 <body id="top">
 	<header>
-		<h1>Simple.css Test Page</h1>
+		<h1>dodo-simple.css Test Page</h1>
 		<p>This is a test page filled with common HTML elements.</p>
 		<nav>
 			<ul>
 				<li><a class="current" href="#text">Text</a></li>
 				<li><a href="#embedded">Embedded content</a></li>
 				<li><a href="#forms">Form elements</a></li>
-				<li><a href="https://simplecss.org/">Project homepage</a></li>
-				<li><a href="https://github.com/kevquirk/simple.css">GitHub repo</a></li>
+				<li><a href="https://github.com/dododoshirouto/dodo-simple.css">GitHub repo</a></li>
 			</ul>
 		</nav>
 	</header>
