Update index.html　Add ads

--- a/sample/index.html
+++ b/sample/index.html
@@ -1092,6 +1092,9 @@
 			</form>
 		</section>
 	</main>
+	<!-- admax -->
+<script src="https://adm.shinobi.jp/s/d4c5f28feff4ed7bb8b6d350f51ffb4f"></script>
+<!-- admax -->
 	<footer>
 		<p>Based on <a href="http://github.com/cbracco/html5-test-page">HTML5-test-page</a> by cbracco.</p>
 	</footer>
